deploy/apps/receiver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: receiver-tls-ccdt
  name: receiver-tls-ccdt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: receiver-tls-ccdt
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: receiver-tls-ccdt
    spec:
      volumes:
        - name: mq-cert-vol
          secret:
            secretName: receiver-tls-ccdt-certs
        # - name: ccdt
        #   configMap:
        #     name: sample-receiver-ccdt
      containers:
      - image: navidsh/mq-sample-receiver:latest
        name: receiver
        ports:
          - containerPort: 9080
          - containerPort: 9443
        # envFrom:
        #   - secretRef:
        #       name: receiver-tls-ccdt-mq
        volumeMounts:
          - name: mq-cert-vol
            mountPath: /etc/x509/certs
          # - name: ccdt
          #   mountPath: /etc/ccdt
