deploy/apps/receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: receiver-tls
  labels:
    app: receiver-tls-ccdt
  name: receiver-tls-ccdt
spec:
  ports:
  - port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: receiver-tls-ccdt
status:
  loadBalancer: {}
