deploy/apps/receiver/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: receiver-tls-ccdt
  name: receiver-tls-ccdt
spec:
  host: receiver-tls-ccdt-ibm-mq.ananke-4c666281ea4dfbebe4821a4891d29f22-0000.tor01.containers.appdomain.cloud
  port:
    targetPort: 9443
  to:
    kind: Service
    name: receiver-tls-ccdt
    weight: 100
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
